@@ -1,7 +1,8 @@
 # By default, NotRemoteRunner is used when RAILS_ENV == 'test'.
 #
-# You can pass options to memcached client by listing the key value pairs
-# under 'listens_on'.
+# You can pass options to memcached client by nesting the key value pairs
+# under 'memcache_options'.
+#
 production:
   listens_on: localhost:15151
 
