@@ -1,6 +1,11 @@
 Version 0.2.4, 03.06.08
 - accept both async_ and asynch_ as prefixes for workling method invocation. thank you francois beausoleil!
 - added memcached configuration options to starling.yml. see example yml for details. thank you larry diehl!
+- applied patches from dave dupre: http://davedupre.com/2008/03/29/ruby-background-tasks-with-starling-part-2/
+  - added threading to starling poller. One polling thread can now be set to run per queue. 
+  - default routing no longer producing queues like a:b:c, this was conflicting with MemCacheClient#stat
+  - added handling for memcache exceptions
+  - keep the database conneciton alive
 
 Version 0.2.2, 15.02.08, rev 31
 - added blaine cook's suggestion: worklings can now (also) be invoked like this: YourWorkling.asynch_your_method(options)
